all pages alignment css issues fixed

--- a/src/index.css
+++ b/src/index.css
@@ -833,4 +833,40 @@ input[type="number"]::-webkit-outer-spin-button,
   border-radius: 10px;
 
 }
+.diet-plan-section-page .program-dropdown button:focus {
+  box-shadow: none !important;
+  outline: none !important;
+  border: 1px solid #ced4da !important;
+}
+.diet-plan-section-page .program-dropdown button:hover {
+  background-color: transparent !important;
+}
+.diet-plan-section-page .program-dropdown button {
+  font-family: Poppins;
+  font-size: 16px;
+  font-weight: 400;
+  line-height: 24px;
+  text-align: left;
+  color: #000000;
+}
+.client-pages-mini a.btn:focus {
+  box-shadow: none !important;
+
+}
+.diet-plan-scroll::-webkit-scrollbar {
+  width: 8px;
+}
+
+/* Track */
+.diet-plan-scroll::-webkit-scrollbar-track {
+  background: #f1f1f1; 
+  border-radius: 10px;
+}
+ 
+/* Handle */
+.diet-plan-scroll::-webkit-scrollbar-thumb {
+  background: #888; 
+  border-radius: 10px;
+
+}
 
